--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="/dist/build.js"></script>
+<script src="/"></script>
 <!-- Plugins JS File -->
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.bundle.min.js"></script>
