--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- Plugins JS File -->
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.bundle.min.js"></script>
-<script src="/js/plugins.min.js"></script>
+<script src="plugins.min.js"></script>
 
 <!-- Main JS File -->
 <script src="/js/main.min.js"></script>
