--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="HTML5 Template" />
   <meta name="description" content="Porto - Bootstrap eCommerce Template">
   <meta name="author" content="SW-THEMES">
-  <link rel="icon" type="image/png" href="/images/logo.png" width="40px">
+  <link rel="icon" type="image/png" href="/static/images/logo.png" width="40px">
   
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHLE-w2f4jDluqZCf-YFi7dNxhFJfNp8"></script>
 
@@ -20,16 +20,21 @@
    
 
   <!-- Plugins CSS File -->
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 
   <!-- Main CSS File -->
-  <link rel="stylesheet" href="/css/style.min.css">
+  <link rel="stylesheet" href="/static/css/style.min.css">
 </head>
 <body>
 <div id="app"></div>
 <script src="/build.js"></script>
 <!-- Plugins JS File -->
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/plugins.min.js"></script>
 
+<!-- Main JS File -->
+<script src="/static/js/main.min.js"></script>
 
 
 </body>
